[gd_scene load_steps=3 format=3 uid="uid://bi24llmei28xu"]

[ext_resource type="Texture2D" uid="uid://0w5x3cx6yarx" path="res://sprites/cannon.png" id="1_4rob0"]
[ext_resource type="Script" uid="uid://bpgvpsqdopnwt" path="res://scripts/AssemblyItem.gd" id="2_y6yi0"]

[node name="AssemblyItem" type="TextureRect" groups=["assembly_items"]]
offset_right = 64.0
offset_bottom = 64.0
pivot_offset = Vector2(32, 32)
texture = ExtResource("1_4rob0")
script = ExtResource("2_y6yi0")

[node name="SnappedItemsContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.375
anchor_top = 0.125
anchor_right = 0.87500006
anchor_bottom = 0.87500006
metadata/_edit_use_anchors_ = true

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
